@@ -1,3 +1,11 @@
+2006-03-10  Jon A. Cruz  <jon@joncruz.org>
+
+	* src/dialogs/eek-color-def.cpp, src/dialogs/eek-color-def.h,
+	  src/dialogs/Makefile_insert, src/dialogs/swatches.h,
+	  src/dialogs/swatches.cpp:
+
+	  Bringing in new color class.
+	
 2006-03-23  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* packaging/macosx/Resources/bin/inkscape: Fix a packaging
